--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html, body {
+    @apply m-0 p-0;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 5px;
   height: 5px;
@@ -15,9 +21,10 @@
   border-radius: 25px;
   transition: all 0.3s;
   background-color: rgba(106, 115, 125, 0.2);
-  &:hover {
-    background-color: rgba(106, 115, 125, 0.27);
-  }
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(106, 115, 125, 0.27);
 }
 
 ::-webkit-scrollbar-corner {
