--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
   html, body {
     @apply m-0 p-0;
   }
+  
+  /* Dark mode styles */
+  .dark {
+    @apply bg-gray-900 text-white;
+  }
 }
 
 ::-webkit-scrollbar {
